--- a/produtos.html
+++ b/produtos.html
@@ -27,23 +27,28 @@
                 <li>
                     <h2>Cabelo</h2>
                     <img src="img/cabelo.jpg" alt="">
-                    <p></p>
-                    <p></p>
+                    <p class="produto-descricao" > Na tesoura ou máquina, como o cliente preferir. </p>
+                    <p class="produto-preco"> R$ 35,00 </p>
                 </li>
                 <li>
                     <h2>Barba</h2>
                     <img src="img/barba.jpg" alt="">
-                    <p></p>
-                    <p></p>
+                    <p class="produto-descricao"> Corte e desenho profissional de barba. </p>
+                    <p class="produto-preco"> R$ 25,00 </p>
                 </li>
                 <li>
                     <h2>Cabelo + Barba</h2>
                     <img src="img/cabelo+barba.jpg" alt="">
-                    <p></p>
-                    <p></p>
+                    <p class="produto-descricao"> Pacote completo de cabelo e barba.</p>
+                    <p class="produto-preco"> R$ 50,00 </p>
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <img src="img/logo-branco.png" alt="">
+            <p class="copyright"> &copy; Copyright Barbearia Alura - 2023 por Gerson Cesar Grobe de Miranda </p>
+        </footer>
         
     </body>
 </html>
